RTI-60 - fixed misaligned full width rows

--- a/community-modules/core/src/styles/ag-grid.scss
+++ b/community-modules/core/src/styles/ag-grid.scss
@@ -632,6 +632,10 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     }
 }
 
+.ag-full-width-row .ag-cell-wrapper.ag-row-group {
+    align-items: center;
+}
+
 .ag-cell-auto-height {
     height: 100%;
 }
